<resources>
    <string name="app_name">MovieApp(ID)</string>
    <string name="text_register">REGISTER</string>
    <string name="hint_name">Masukkan Nama</string>
    <string name="hint_email">Masukkan Email</string>
    <string name="hint_password">Masukkan Password</string>
    <string name="hint_confirm_password">Masukkan Konfirmasi Password</string>
    <string name="error_password_match">Password Tidak Cocok</string>
    <string name="error_message_name">Masukkan Nama</string>
    <string name="error_message_email">Masukkan Valid Email</string>
    <string name="error_message_password">Masukkan Password</string>
    <string name="success_message">Registrasi Sukses</string>
    <string name="error_email_exists">Email Sudah Ada</string>
    <string name="text_login">LOGIN</string>
    <string name="text_not_member">Belum mempunyai akun</string>
    <string name="error_valid_email_password">Email dan Password salah</string>
    <string name="text_logout">Logout</string>
    <string name="have_account">Sudah Memiliki Akun? Login</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hint_username">Masukkan Username</string>
    <string name="hint_first_name">Masukkan Nama Depan</string>
    <string name="hint_last_name">Masukkan Nama belakang</string>
</resources>